--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ main .trending > div > div > div {
 @media (max-width: 910px) {
     .container {
         grid-template-columns: 1fr;
-        grid-template-rows: min-content min-content min-content;
+        grid-template-rows: min-content min-content;
     }
 
     aside {
@@ -278,28 +278,23 @@ main .trending > div > div > div {
     }
 
     nav {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr min-content;
+        grid-template-rows: repeat(2, min-content);
         padding: 25px;
-        justify-content: space-around;
         gap: 25px;
-    }
-
-    nav .search, nav .buttons {
-        grid-column: span 2;
     }
 
     nav .profile {
-        justify-content: start;
+        justify-content: center;
     }
 
     nav .greeting {
-        grid-template-columns: 1fr 1fr;
-        justify-items: end;
-        gap: 25px;
+        display: none;
     }
 
     nav .buttons {
         justify-items: center;
+        grid-column: span 2;
     }
 
     main {
